# agh-box

./: .gitignore  CMakeLists.txt  README.md
include/: box_utils.h  communication_utils.h  file_utils.h  message.h  server.h  socket_utils.h  stack.h  utils.h
src/: CMakeLists.txt  box_utils.c  client.c  communication_utils.c  server.c  socket_utils.c  stack.c  utils.c
